--- a/Round2/Manuscript/preamble.tex
+++ b/Round2/Manuscript/preamble.tex
@@ -33,7 +33,7 @@
 	Department of Medical Statistics and Bioinformatics, \\
 	Leiden University Medical Center, The Netherlands.
 	\and Yuval Benjamini\\
-	Department of Statistics \\
+	Department of Statistics, \\
 	Hebrew University, Israel
 	\and Roee Gilron \\ 
 	Movement Disorders and Neuromodulation Center,\\
